# terminatooor

./: .gitignore  ARCHITECTURE.md  Cargo.toml  analyse-liquidations.sh
deploy/: .env.example  deploy.sh  setup-vps.sh  terminatooor.service
terminator/: Cargo.toml
terminator/src/: accounts.rs  client.rs  config.rs  geyser.rs  instructions.rs  jet.rs  jito.rs  jupiter.rs  liquidator.rs  lookup_tables.rs  main.rs  math.rs  metis.rs  model.rs  operations.rs  parallel.rs  px.rs  routing.rs  shredstream.rs  shredstream_proto.rs  sysvars.rs  titan.rs
terminator/src/orbit_link/: async_client.rs  consts.rs  errors.rs  fees.rs  mod.rs  tx_builder.rs
terminator/tests/: flash_loan_liquidation_test.rs  transaction_size_test.rs
